<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".dialog.DialogDetailsFile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:src="@drawable/ic_details_color" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/details"
            android:textColor="@color/standard_black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/standard_black"
            android:text="@string/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/file_name"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            android:textColor="@color/gray_hint"
            android:text="@string/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/standard_black"
            android:text="@string/storage_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/storage_path"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            android:textColor="@color/gray_hint"
            android:text="@string/storage_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/standard_black"
            android:text="@string/last_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/last_modified"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            android:textColor="@color/gray_hint"
            android:text="@string/last_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/standard_black"
            android:text="@string/file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/file_size"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            android:textColor="@color/gray_hint"
            android:text="@string/file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/btn_ok"
            android:gravity="center"
            android:textSize="26sp"
            android:background="@drawable/rounded_button"
            android:layout_marginVertical="20dp"
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>