<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dialog.DialogRenameFile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:src="@drawable/ic_write" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/rename"
            android:textColor="@color/standard_black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp">

        <EditText
            android:id="@+id/edt_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_search_view"
            android:hint="@string/new_file_name"
            android:inputType="text"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/view_rounded_square"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/standard_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/view_rounded_square"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textColor="@color/standard_black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>