<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dialog.DialogDeleteFile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:src="@drawable/ic_delete_color" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/delete"
            android:textColor="@color/standard_black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp">

        <TextView
            android:id="@+id/file_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/file_path"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            android:textColor="@color/gray_hint"
            android:text="@string/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/view_rounded_square"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/standard_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/view_rounded_square"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textColor="@color/standard_black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>