<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/file_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_pdf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintEnd_toStartOf="@+id/more_vert"
            app:layout_constraintStart_toEndOf="@+id/file_icon"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/file_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textColor="@color/standard_black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/last_modified"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/last_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_path"
                android:textColor="@color/gray_hint"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/file_name" />

            <TextView
                android:id="@+id/size_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/_00_0kb"
                android:textColor="@color/gray_hint"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/last_modified"
                app:layout_constraintTop_toBottomOf="@+id/file_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:padding="5dp"
            android:id="@+id/more_vert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:background="#80FF4081" />

</LinearLayout>